Fix rankable item wrapping

--- a/public/styles/StagingArea.module.scss
+++ b/public/styles/StagingArea.module.scss
@@ -1,6 +1,6 @@
 .wrapper {
   display: flex;
   flex-wrap: wrap;
-  height: 120px;
+  min-height: 120px;
   margin-top: 2.5em;
 }
