--- a/public/styles/Tier.module.scss
+++ b/public/styles/Tier.module.scss
@@ -2,7 +2,7 @@
 
 .wrapper {
   display: flex;
-  height: 120px;
+  min-height: 120px;
   background-color: #1a1a17;
   outline: 1px solid darken(#1a1a17, 10%);
 
@@ -13,6 +13,7 @@
     text-align: center;
     font-size: 2em;
     flex-basis: 5em;
+    flex-shrink: 0;
     outline: 1px solid darken(#1a1a17, 10%);
 
     $backgroundColours: (
